# Game_Engine

./: .gitignore  CMakeLists.txt  MyGame.sln  unique.txt
Manifest/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Manifest.h  Manifest.vcxproj  Manifest.vcxproj.filters  ManifestApp.cpp  ManifestApp.h  ManifestUtils.h  OpenGLSprite.cpp  OpenGLSprite.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h
Manifest/Assets/Shader/: myFragmentShader.glsl
Manifest/GLFWimpl/: GlfwImplementation.cpp  GlfwImplementation.h
Manifest/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
MyGame/: CMakeLists.txt  CMakeLists.txt.txt  MyGame.vcxproj  MyGameApp.cpp  MyGameApp.h  Unit.cpp  Unit.h  main.cpp
MyGame/Assets/Shader/: myVertexShader.glsl
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
